// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ascii-bars > renders a deterministic titled box for a full radar 1`] = `
"╭─ 九维兑现度 ─────────────────────────────╮
│ 生产 ██████████ 5/5  迁移 ██████████ 5/5 │
│ 准入 ██████████ 5/5  分发 ██████████ 5/5 │
│ 组合 ██████████ 5/5  安全 ██████████ 5/5 │
│ 开销 ██████████ 5/5  保鲜 ██████████ 5/5 │
│ 救济 ██████████ 5/5                      │
╰──────────────────────────────────────────╯"
`;

exports[`ascii-bars > renders a deterministic titled box for mixed values 1`] = `
"╭─ 九维兑现度 ─────────────────────────────╮
│ 生产 ────────── --   迁移 ████████░░ 4/5 │
│ 准入 ██████░░░░ 3/5  分发 ░░░░░░░░░░ 0/5 │
│ 组合 ██████████ 5/5  安全 ██████████ 5/5 │
│ 开销 ██████████ 5/5  保鲜 ██████████ 5/5 │
│ 救济 ████░░░░░░ 2/5                      │
╰──────────────────────────────────────────╯"
`;
